--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -99,10 +99,11 @@ header {
 
 .img-cerisy-footer{
   display: block;
-  width: 130px;
+  max-width: 130px;
+	height: unset;
 }
 .logo-footer {
-	height: 77px;
+	height: 74px;
 }
 
 @media screen and (max-width: 576px){
@@ -113,7 +114,7 @@ header {
     position: fixed;
     box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.2);
     background-color: white;
-    z-index: 1000;
+    z-index: 1200;
   }
 
   /* Element de déco, Navbar, atour de la loupe*/
@@ -136,7 +137,9 @@ header {
   ============= */
  .img-cerisy-footer{
    display: block;
-   width: 130px;
+   /*width: 130px;*/
+	 max-width: 50%;
+	 height: 50px;
  }
 
  .logo-footer {
